# ExaForge

./: .gitignore  README.md  pyproject.toml
configs/: data_card_extract_test.yaml  generic_generation.yaml  model_card_extract_test.yaml  paper_cards.yaml  paper_cards_test.yaml
configs/aegis_configs/: single_file.yaml
src/exaforge/: __init__.py  aegis_bridge.py  checkpoint.py  cli.py  client.py  config.py  endpoints.py  lustre.py  monitor.py  orchestrator.py
src/exaforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exaforge/readers/: __init__.py  base.py  jsonl.py  text_directory.py
src/exaforge/tasks/: __init__.py  base.py  card_extraction.py  generation.py
src/exaforge/writers/: __init__.py  base.py  jsonl.py
tests/: conftest.py  test_aegis_bridge.py  test_checkpoint.py  test_cli.py  test_client.py  test_config.py  test_endpoints.py  test_lustre.py  test_monitor.py  test_orchestrator.py  test_readers.py  test_tasks.py  test_writers.py
